[gd_scene load_steps=8 format=3 uid="uid://cdj3bfmyo2clw"]

[ext_resource type="Script" path="res://ui/inventory/inventory.gd" id="1_165ho"]
[ext_resource type="Texture2D" uid="uid://dtmqj2v3bimsh" path="res://ui/inventory.png" id="1_bdsqb"]
[ext_resource type="PackedScene" uid="uid://7dwk8c3s0ei8" path="res://ui/inventory/slot.tscn" id="3_s3i6g"]
[ext_resource type="Texture2D" uid="uid://dfi7fandwvyqb" path="res://entities/player/global.png" id="4_db13s"]

[sub_resource type="AtlasTexture" id="AtlasTexture_aux0f"]
atlas = ExtResource("1_bdsqb")
region = Rect2(304, 220, 293, 132)

[sub_resource type="AtlasTexture" id="AtlasTexture_wutl1"]
atlas = ExtResource("1_bdsqb")
region = Rect2(304, 27, 16, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_fb1t2"]
atlas = ExtResource("4_db13s")
region = Rect2(10, 12, 12, 20)

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_165ho")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InventoryBG" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_aux0f")
expand_mode = 1
stretch_mode = 3

[node name="GridContainer" type="GridContainer" parent="MarginContainer/InventoryBG"]
layout_mode = 2
offset_left = 109.0
offset_top = 77.0
offset_right = 295.0
offset_bottom = 138.0
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 6
columns = 9

[node name="EquipSlots" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 77.0
offset_right = 97.0
offset_bottom = 133.0
theme_override_constants/h_separation = 38
theme_override_constants/v_separation = 2
columns = 2

[node name="Slot" parent="EquipSlots" instance=ExtResource("3_s3i6g")]
layout_mode = 2

[node name="Slot2" parent="EquipSlots" instance=ExtResource("3_s3i6g")]
layout_mode = 2

[node name="Slot3" parent="EquipSlots" instance=ExtResource("3_s3i6g")]
layout_mode = 2

[node name="Slot4" parent="EquipSlots" instance=ExtResource("3_s3i6g")]
layout_mode = 2

[node name="Slot5" parent="EquipSlots" instance=ExtResource("3_s3i6g")]
layout_mode = 2

[node name="Slot6" parent="EquipSlots" instance=ExtResource("3_s3i6g")]
layout_mode = 2

[node name="Trash" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 106.0
offset_top = 34.0
offset_right = 122.0
offset_bottom = 55.0
texture = SubResource("AtlasTexture_wutl1")
stretch_mode = 2

[node name="InvPlayerPic" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 53.0
offset_top = 75.0
offset_right = 65.0
offset_bottom = 115.0
scale = Vector2(1.5, 1.5)
texture = SubResource("AtlasTexture_fb1t2")
stretch_mode = 3

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 36.0
offset_top = 133.0
offset_right = 88.0
offset_bottom = 145.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 6
text = "Scott"
horizontal_alignment = 1

[node name="GrabbedSlot" parent="." instance=ExtResource("3_s3i6g")]
visible = false
modulate = Color(1, 1, 1, 0.490196)
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
mouse_filter = 2

[connection signal="gui_input" from="Trash" to="." method="_on_trash_gui_input"]
